--- a/Binary/worldserver.conf
+++ b/Binary/worldserver.conf
@@ -39,8 +39,9 @@ fairytestmode=0
 playerdmg=120
 monsterdmg=100
 cfmode=0
-osRoseVer=81
+osRoseVer=80
 testgrid=0
+jrose=0
 
 [PASSWORDS]
 loginpass=789456
